--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.5, user-scalable=1, shrink-to-fit=no" name="viewport">
     <meta name="description" content="Accelerating Patient Outcomes in Immune Research.">
-    <meta name="author" content="Creative Tim, Cristi Jora">
+    <meta name="author" content="Thomas Moran">
     <title>ImmunoBlock</title>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
